database path added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:/events/devsecops
+spring.datasource.url=jdbc:h2:file:/opt/h2db/devsecops
 #spring.datasource.url=jdbc:h2:mem:eventsdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
