--- a/build.gradle
+++ b/build.gradle
@@ -19,15 +19,29 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+//	implementation 'junit:junit:4.13.1'
 	runtimeOnly 'com.h2database:h2'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'junit:junit:4.13.1'
-	implementation 'junit:junit:4.13.1'
-	implementation 'org.mockito:mockito-core:4.3.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.1.4'
+
+
+	// testing dependencies
+	implementation 'org.mockito:mockito-core:4.3.1'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-junit-jupiter:2.23.0'
+	testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+
+/*
+	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
+	testImplementation 'org.assertj:assertj-core:3.24.2'
+	implementation 'org.assertj:assertj-core:3.24.2'
+*/
+	testImplementation 'junit:junit:4.13.1'
+
 
 
 }
