--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:h2:file:/data/spring-app-data/devsecops
-#spring.datasource.url=jdbc:h2:mem:eventsdb
+#spring.datasource.url=jdbc:h2:file:/data/spring-app-data/devsecops
+spring.datasource.url=jdbc:h2:mem:eventsdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
